--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -10,7 +10,7 @@
     <div class="formarea">
 
         <div class="form-row">
-            <input type="text" class="text-input--underbar width-full" placeholder="姓名" ng-model="signup_input.nickname">
+            <input type="text" class="text-input--underbar width-full" placeholder="暱稱" ng-model="signup_input.nickname">
         </div>
 
         <div class="form-row">
