--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -13,30 +13,46 @@
             </ons-toolbar-button>
         </div>
     </ons-toolbar>
-    <div id="googlemap" class="near_map"></div>
-    <div class="near_buttons">
-        <button class="button near_button" ng-disabled="!nowShop" ng-click="lookMenu()">瞧菜單</button>
-        <button class="button near_button" ng-disabled="!nowShop" ng-click="gotoStore()">看評論</button>
-        <button class="button near_button" ng-disabled="!nowShop" ng-click="callShop()">打電話</button>
-    </div>
 
-    <ons-scroller ng-style="style">
-        <ons-list class="near_list">
-            <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.id}">
-                <div class="list-item-left">
-                    <div back-img="{{shopAvatar(shop.company_id)}}" local="true" class="avator"></div>
-                </div>
-                <div class="list-item-right">
-                    <div class="list-item-content">
-                        <div class="name">{{shop.company_name + shop.name}}
-                            <span class="lucent">{{distance(shop)}}km</span>
+    <div class="card">
+        <div class="card-image">
+            <div class="near_buttons">
+                <button class="button near_button" ng-disabled="!nowShop" ng-click="lookMenu()">瞧菜單</button>
+                <button class="button near_button" ng-disabled="!nowShop" ng-click="gotoStore()">看評論</button>
+                <button class="button near_button" ng-disabled="!nowShop" ng-click="callShop()">打電話</button>
+            </div>
+            <div id="googlemap" class="near_map"></div>
+        </div>
+        <div class="card-avatar waves-effect waves-block">
+            <div class="avatar"></div>
+            <span class="card-title activator grey-text text-darken-4">                            {{nowShop.company_name + nowShop.name}}
+            <i class="material-icons ion-chevron-up right"></i></span>
+            <p ng-bind="nowShop.address"></p>
+        </div>
+        <div class="card-reveal">
+            <div class="card-avatar waves-effect waves-block">
+                <div class="avatar"></div>
+                <span class="card-title activator grey-text text-darken-4">
+            <i class="material-icons ion-chevron-up right"></i></span>
+                <p ng-bind="nowShop.address"></p>
+            </div>
+            <ons-scroller ng-style="style">
+                <ons-list class="near_list">
+                    <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.id}">
+                        <div class="list-item-left">
+                            <div back-img="{{shopAvatar(shop.company_id)}}" local="true" class="avator"></div>
                         </div>
-                        <div class="desc">{{shop.address}}</div>
-                    </div>
-                </div>
-            </ons-list-item>
-        </ons-list>
-    </ons-scroller>
-
-
+                        <div class="list-item-right">
+                            <div class="list-item-content">
+                                <div class="name">{{shop.company_name + shop.name}}
+                                    <span class="lucent">{{distance(shop)}}km</span>
+                                </div>
+                                <div class="desc">{{shop.address}}</div>
+                            </div>
+                        </div>
+                    </ons-list-item>
+                </ons-list>
+            </ons-scroller>
+        </div>
+    </div>
 </ons-page>
