--- a/styles/app.css
+++ b/styles/app.css
@@ -682,92 +682,75 @@ textarea,
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center; }
-
-/* line 666, /Users/young/orderdrink/www/styles/app.scss */
-.near_page .card-action {
-  padding: 0px;
-  box-shadow: 1px 2px 3px #aaa;
-  margin: 0px; }
-  /* line 670, /Users/young/orderdrink/www/styles/app.scss */
-  .near_page .card-action .col {
+  /* line 665, /Users/young/orderdrink/www/styles/app.scss */
+  .near_page .card .card-avatar {
+    padding: 20px 20px 20px 84px;
+    border-radius: 0 0 2px 2px;
+    position: relative; }
+    /* line 669, /Users/young/orderdrink/www/styles/app.scss */
+    .near_page .card .card-avatar .avatar {
+      position: absolute;
+      border-radius: 50%;
+      height: 64px;
+      width: 64px;
+      left: 12px;
+      background-color: #595757;
+      top: calc(50% - 32px); }
+    /* line 678, /Users/young/orderdrink/www/styles/app.scss */
+    .near_page .card .card-avatar .card-title {
+      font-size: 24px;
+      line-height: 30px;
+      margin: 0px;
+      letter-spacing: 1px;
+      font-weight: 900; }
+    /* line 685, /Users/young/orderdrink/www/styles/app.scss */
+    .near_page .card .card-avatar p {
+      margin: 0; }
+  /* line 689, /Users/young/orderdrink/www/styles/app.scss */
+  .near_page .card .card-reveal {
     padding: 0px; }
-  /* line 673, /Users/young/orderdrink/www/styles/app.scss */
-  .near_page .card-action .btn {
-    width: 100%;
-    background-color: transparent;
-    color: #595757;
-    box-shadow: none; }
+    /* line 691, /Users/young/orderdrink/www/styles/app.scss */
+    .near_page .card .card-reveal .list-item-container {
+      line-height: 1;
+      font-size: 14px;
+      padding: 15px 0px 15px 15px; }
+      /* line 695, /Users/young/orderdrink/www/styles/app.scss */
+      .near_page .card .card-reveal .list-item-container .list-item-left {
+        width: 60px;
+        margin-right: -60px;
+        float: left; }
+        /* line 699, /Users/young/orderdrink/www/styles/app.scss */
+        .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%; }
+      /* line 705, /Users/young/orderdrink/www/styles/app.scss */
+      .near_page .card .card-reveal .list-item-container .list-item-right {
+        width: 100%;
+        float: right; }
+        /* line 708, /Users/young/orderdrink/www/styles/app.scss */
+        .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
+          margin-left: 50px;
+          margin-right: 30px; }
+          /* line 711, /Users/young/orderdrink/www/styles/app.scss */
+          .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
+            font-weight: 500;
+            line-height: 16px;
+            font-size: 15px;
+            margin-bottom: 6px; }
+          /* line 717, /Users/young/orderdrink/www/styles/app.scss */
+          .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
+            line-height: 16px; }
+          /* line 720, /Users/young/orderdrink/www/styles/app.scss */
+          .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
+            opacity: 0.4; }
 
-/* line 680, /Users/young/orderdrink/www/styles/app.scss */
-.near_page .card-avatar {
-  padding: 20px 20px 20px 84px;
-  border-radius: 0 0 2px 2px;
-  position: relative; }
-  /* line 684, /Users/young/orderdrink/www/styles/app.scss */
-  .near_page .card-avatar .avatar {
-    position: absolute;
-    border-radius: 50%;
-    height: 64px;
-    width: 64px;
-    left: 12px;
-    background-color: #595757;
-    top: calc(50% - 32px); }
-  /* line 693, /Users/young/orderdrink/www/styles/app.scss */
-  .near_page .card-avatar .card-title {
-    font-size: 24px;
-    line-height: 30px;
-    margin: 0px;
-    letter-spacing: 1px;
-    font-weight: 900; }
-  /* line 700, /Users/young/orderdrink/www/styles/app.scss */
-  .near_page .card-avatar p {
-    margin: 0; }
-
-/* line 704, /Users/young/orderdrink/www/styles/app.scss */
-.near_page .card-reveal {
-  padding: 0px; }
-  /* line 706, /Users/young/orderdrink/www/styles/app.scss */
-  .near_page .card-reveal .list-item-container {
-    line-height: 1;
-    font-size: 14px;
-    padding: 15px 0px 15px 15px; }
-    /* line 710, /Users/young/orderdrink/www/styles/app.scss */
-    .near_page .card-reveal .list-item-container .list-item-left {
-      width: 60px;
-      margin-right: -60px;
-      float: left; }
-      /* line 714, /Users/young/orderdrink/www/styles/app.scss */
-      .near_page .card-reveal .list-item-container .list-item-left .avatar {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%; }
-    /* line 720, /Users/young/orderdrink/www/styles/app.scss */
-    .near_page .card-reveal .list-item-container .list-item-right {
-      width: 100%;
-      float: right; }
-      /* line 723, /Users/young/orderdrink/www/styles/app.scss */
-      .near_page .card-reveal .list-item-container .list-item-right .list-item-content {
-        margin-left: 50px;
-        margin-right: 30px; }
-        /* line 726, /Users/young/orderdrink/www/styles/app.scss */
-        .near_page .card-reveal .list-item-container .list-item-right .list-item-content .name {
-          font-weight: 500;
-          line-height: 16px;
-          font-size: 15px;
-          margin-bottom: 6px; }
-        /* line 732, /Users/young/orderdrink/www/styles/app.scss */
-        .near_page .card-reveal .list-item-container .list-item-right .list-item-content .desc {
-          line-height: 16px; }
-        /* line 735, /Users/young/orderdrink/www/styles/app.scss */
-        .near_page .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
-          opacity: 0.4; }
-
-/* line 743, /Users/young/orderdrink/www/styles/app.scss */
+/* line 729, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 747, /Users/young/orderdrink/www/styles/app.scss */
+/* line 733, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
