--- a/styles/app.scss
+++ b/styles/app.scss
@@ -642,6 +642,7 @@ textarea,
             }
         }
         .card-avatar {
+            min-height: 96px;
             padding: 20px 20px 20px 84px;
             border-radius: 0 0 2px 2px;
             position: relative;
