--- a/styles/app.css
+++ b/styles/app.css
@@ -660,10 +660,11 @@ textarea,
       width: 100%; }
   /* line 644, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-avatar {
+    min-height: 96px;
     padding: 20px 20px 20px 84px;
     border-radius: 0 0 2px 2px;
     position: relative; }
-    /* line 648, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 649, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .avatar {
       position: absolute;
       border-radius: 50%;
@@ -672,61 +673,61 @@ textarea,
       left: 12px;
       background-color: #595757;
       top: calc(50% - 32px); }
-    /* line 657, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 658, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .card-title {
       font-size: 24px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 664, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 665, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar p {
       margin: 0; }
-  /* line 668, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 669, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 670, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 671, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .list-item-container {
       line-height: 1;
       font-size: 14px;
       padding: 15px 0px 15px 15px; }
-      /* line 674, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 675, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-left {
         width: 60px;
         margin-right: -60px;
         float: left; }
-        /* line 678, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 679, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
           width: 40px;
           height: 40px;
           border-radius: 50%; }
-      /* line 684, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 685, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-right {
         width: 100%;
         float: right; }
-        /* line 687, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 688, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
           margin-left: 50px;
           margin-right: 30px; }
-          /* line 690, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 691, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
             font-weight: 500;
             line-height: 16px;
             font-size: 15px;
             margin-bottom: 6px; }
-          /* line 696, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 697, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
             line-height: 16px; }
-          /* line 699, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 700, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
             opacity: 0.4; }
 
-/* line 708, /Users/young/orderdrink/www/styles/app.scss */
+/* line 709, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 712, /Users/young/orderdrink/www/styles/app.scss */
+/* line 713, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
