--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -24,21 +24,21 @@
             <div id="googlemap" class="near_map"></div>
         </div>
         <div class="card-avatar waves-effect waves-block">
-            <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
+            <div class="avatar" rn-lazy-background="{{shopAvatar(shop.company_id)}}"></div>
             <span class="card-title activator grey-text text-darken-4">                            {{nowShop.company_name + nowShop.name}}
             <i class="material-icons ion-chevron-up right"></i></span>
             <p ng-bind="nowShop.address"></p>
         </div>
         <div class="card-reveal">
             <div class="card-avatar waves-effect waves-block">
-                <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
+                <div class="avatar" rn-lazy-background="{{shopAvatar(shop.company_id)}}"></div>
                 <span class="card-title activator grey-text text-darken-4">
             <i class="material-icons ion-chevron-up right"></i></span>
                 <p ng-bind="nowShop.address"></p>
             </div>
             <ons-scroller>
                 <ons-list>
-                    <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.id}">
+                    <ons-list-item modifier="chevron" class="list-item-container waves-effect waves-block" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.id}">
                         <div class="list-item-left">
                             <div back-img="{{shopAvatar(shop.company_id)}}" local="true" class="avator"></div>
                         </div>
