--- a/styles/app.css
+++ b/styles/app.css
@@ -672,62 +672,68 @@ textarea,
       width: 64px;
       left: 12px;
       background-color: #595757;
-      top: calc(50% - 32px); }
-    /* line 658, /Users/young/orderdrink/www/styles/app.scss */
+      top: calc(50% - 32px);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center; }
+    /* line 659, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .card-title {
       font-size: 24px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 665, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 666, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar p {
       margin: 0; }
-  /* line 669, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 670, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 671, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 672, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .list-item-container {
       line-height: 1;
       font-size: 14px;
       padding: 15px 0px 15px 15px; }
-      /* line 675, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 676, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-left {
         width: 60px;
         margin-right: -60px;
         float: left; }
-        /* line 679, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 680, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
           width: 40px;
           height: 40px;
-          border-radius: 50%; }
-      /* line 685, /Users/young/orderdrink/www/styles/app.scss */
+          border-radius: 50%;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center; }
+      /* line 687, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-right {
         width: 100%;
         float: right; }
-        /* line 688, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 690, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
           margin-left: 50px;
           margin-right: 30px; }
-          /* line 691, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 693, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
             font-weight: 500;
             line-height: 16px;
             font-size: 15px;
             margin-bottom: 6px; }
-          /* line 697, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 699, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
             line-height: 16px; }
-          /* line 700, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 702, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
             opacity: 0.4; }
 
-/* line 709, /Users/young/orderdrink/www/styles/app.scss */
+/* line 711, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 713, /Users/young/orderdrink/www/styles/app.scss */
+/* line 715, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
