--- a/styles/app.css
+++ b/styles/app.css
@@ -653,18 +653,19 @@ textarea,
     .near_page .card .card-image .near_buttons {
       position: absolute;
       top: 5px;
-      left: 5px; }
-    /* line 639, /Users/young/orderdrink/www/styles/app.scss */
+      left: 5px;
+      z-index: 2; }
+    /* line 640, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-image #googlemap {
       height: 100%;
       width: 100%; }
-  /* line 644, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 645, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-avatar {
     min-height: 96px;
     padding: 20px 20px 20px 84px;
     border-radius: 0 0 2px 2px;
     position: relative; }
-    /* line 649, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 650, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .avatar {
       position: absolute;
       border-radius: 50%;
@@ -676,30 +677,30 @@ textarea,
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
-    /* line 659, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 660, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .card-title {
       font-size: 24px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 666, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 667, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar p {
       margin: 0; }
-  /* line 670, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 671, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 672, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 673, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .list-item-container {
       line-height: 1;
       font-size: 14px;
       padding: 15px 0px 15px 15px; }
-      /* line 676, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 677, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-left {
         width: 60px;
         margin-right: -60px;
         float: left; }
-        /* line 680, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 681, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
           width: 40px;
           height: 40px;
@@ -707,33 +708,33 @@ textarea,
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center; }
-      /* line 687, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 688, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-right {
         width: 100%;
         float: right; }
-        /* line 690, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 691, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
           margin-left: 50px;
           margin-right: 30px; }
-          /* line 693, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 694, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
             font-weight: 500;
             line-height: 16px;
             font-size: 15px;
             margin-bottom: 6px; }
-          /* line 699, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 700, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
             line-height: 16px; }
-          /* line 702, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 703, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
             opacity: 0.4; }
 
-/* line 711, /Users/young/orderdrink/www/styles/app.scss */
+/* line 712, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 715, /Users/young/orderdrink/www/styles/app.scss */
+/* line 716, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
