--- a/styles/app.scss
+++ b/styles/app.scss
@@ -635,6 +635,7 @@ textarea,
                 position: absolute;
                 top: 5px;
                 left: 5px;
+                z-index: 2;
             }
             #googlemap {
                 height: 100%;
