--- a/styles/app.css
+++ b/styles/app.css
@@ -648,7 +648,7 @@ textarea,
   display: block; }
   /* line 632, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-image {
-    height: calc(100% - 96px); }
+    height: 100%; }
     /* line 634, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-image .near_buttons {
       position: absolute;
@@ -660,12 +660,18 @@ textarea,
       height: 100%;
       width: 100%; }
   /* line 645, /Users/young/orderdrink/www/styles/app.scss */
+  .near_page .card .card-footer {
+    position: absolute;
+    bottom: 0px;
+    background-color: #fff;
+    opacity: 0.8; }
+  /* line 651, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-avatar {
     min-height: 96px;
     padding: 20px 20px 20px 84px;
     border-radius: 0 0 2px 2px;
     position: relative; }
-    /* line 650, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 656, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .avatar {
       position: absolute;
       border-radius: 50%;
@@ -677,30 +683,32 @@ textarea,
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
-    /* line 660, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 666, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .card-title {
-      font-size: 24px;
+      font-size: 22px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 667, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 673, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar p {
-      margin: 0; }
-  /* line 671, /Users/young/orderdrink/www/styles/app.scss */
+      margin: 0;
+      line-height: 18px;
+      font-size: 16px; }
+  /* line 679, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 673, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 681, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .list-item-container {
       line-height: 1;
       font-size: 14px;
       padding: 15px 0px 15px 15px; }
-      /* line 677, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 685, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-left {
         width: 60px;
         margin-right: -60px;
         float: left; }
-        /* line 681, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 689, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
           width: 40px;
           height: 40px;
@@ -708,33 +716,33 @@ textarea,
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center; }
-      /* line 688, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 696, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-right {
         width: 100%;
         float: right; }
-        /* line 691, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 699, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
           margin-left: 50px;
           margin-right: 30px; }
-          /* line 694, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 702, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
             font-weight: 500;
             line-height: 16px;
             font-size: 15px;
             margin-bottom: 6px; }
-          /* line 700, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 708, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
             line-height: 16px; }
-          /* line 703, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 711, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
             opacity: 0.4; }
 
-/* line 712, /Users/young/orderdrink/www/styles/app.scss */
+/* line 720, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 716, /Users/young/orderdrink/www/styles/app.scss */
+/* line 724, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
