--- a/styles/app.scss
+++ b/styles/app.scss
@@ -630,7 +630,7 @@ textarea,
         position: relative;
         display: block;
         .card-image {
-            height: calc(100% - 96px);
+            height: 100%;
             .near_buttons {
                 position: absolute;
                 top: 5px;
@@ -641,6 +641,12 @@ textarea,
                 height: 100%;
                 width: 100%;
             }
+        }
+        .card-footer {
+            position: absolute;
+            bottom: 0px;
+            background-color: #fff;
+            opacity: 0.8;
         }
         .card-avatar {
             min-height: 96px;
@@ -658,14 +664,16 @@ textarea,
                 @include backgroundCover();
             }
             .card-title {
-                font-size: 24px;
+                font-size: 22px;
                 line-height: 30px;
                 margin: 0px;
                 letter-spacing: 1px;
                 font-weight: 900;
             }
             p {
-                margin: 0
+                margin: 0;
+                line-height: 18px;
+                font-size: 16px;
             }
         }
         .card-reveal {
