--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -23,18 +23,19 @@
             </div>
             <div id="googlemap" class="near_map"></div>
         </div>
-        <div class="card-avatar waves-effect waves-block">
-            <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
-            <span class="card-title activator grey-text text-darken-4">                            {{nowShop.company_name + nowShop.name}}
-            <i class="material-icons ion-chevron-up right"></i></span>
-            <p ng-bind="nowShop.address"></p>
+        <div class="card-footer">
+            <div class="card-avatar waves-effect waves-block">
+                <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
+                <span class="card-title activator grey-text text-darken-4" ng-bind="nowShop.company_name + nowShop.name"></span>
+                <p ng-bind="nowShop.address"></p>
+            </div>
         </div>
         <div class="card-reveal">
             <div class="card-avatar waves-effect waves-block">
                 <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
-                <span class="card-title activator grey-text text-darken-4">
-                {{nowShop.company_name + nowShop.name}}
-                <i class="material-icons ion-chevron-up right"></i></span>
+                <span class="card-title activator grey-text text-darken-4" ng-bind="">
+                    {{nowShop.company_name + nowShop.name}}</span>
+
                 <p ng-bind="nowShop.address"></p>
             </div>
             <ons-scroller>
