--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -17,9 +17,9 @@
     <div class="card">
         <div class="card-image">
             <div class="near_buttons">
-                <button class="button near_button" ng-disabled="!nowShop" ng-click="lookMenu()">瞧菜單</button>
-                <button class="button near_button" ng-disabled="!nowShop" ng-click="gotoStore()">看評論</button>
-                <button class="button near_button" ng-disabled="!nowShop" ng-click="callShop()">打電話</button>
+                <button class="button near_button waves-effect waves-light" ng-disabled="!nowShop" ng-click="lookMenu()">瞧菜單</button>
+                <button class="button near_button waves-effect waves-light" ng-disabled="!nowShop" ng-click="gotoStore()">看評論</button>
+                <button class="button near_button waves-effect waves-light" ng-disabled="!nowShop" ng-click="callShop()">打電話</button>
             </div>
             <div id="googlemap" class="near_map"></div>
         </div>
