--- a/styles/app.css
+++ b/styles/app.css
@@ -645,33 +645,34 @@ textarea,
 .near_page .card {
   height: 100%;
   position: relative;
-  display: block; }
-  /* line 632, /Users/young/orderdrink/www/styles/app.scss */
+  display: block;
+  margin: 0; }
+  /* line 633, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-image {
     height: 100%; }
-    /* line 634, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 635, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-image .near_buttons {
       position: absolute;
       top: 5px;
       left: 5px;
       z-index: 2; }
-    /* line 640, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 641, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-image #googlemap {
       height: 100%;
       width: 100%; }
-  /* line 645, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 646, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-footer {
     position: absolute;
     bottom: 0px;
     background-color: #fff;
     opacity: 0.8; }
-  /* line 651, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 652, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-avatar {
     min-height: 96px;
     padding: 20px 20px 20px 84px;
     border-radius: 0 0 2px 2px;
     position: relative; }
-    /* line 656, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 657, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .avatar {
       position: absolute;
       border-radius: 50%;
@@ -683,32 +684,32 @@ textarea,
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
-    /* line 666, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 667, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar .card-title {
       font-size: 22px;
       line-height: 30px;
       margin: 0px;
       letter-spacing: 1px;
       font-weight: 900; }
-    /* line 673, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 674, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-avatar p {
       margin: 0;
       line-height: 18px;
       font-size: 16px; }
-  /* line 679, /Users/young/orderdrink/www/styles/app.scss */
+  /* line 680, /Users/young/orderdrink/www/styles/app.scss */
   .near_page .card .card-reveal {
     padding: 0px; }
-    /* line 681, /Users/young/orderdrink/www/styles/app.scss */
+    /* line 682, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .list-item-container {
       line-height: 1;
       font-size: 14px;
       padding: 15px 0px 15px 15px; }
-      /* line 685, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 686, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-left {
         width: 60px;
         margin-right: -60px;
         float: left; }
-        /* line 689, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 690, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-left .avatar {
           width: 40px;
           height: 40px;
@@ -716,33 +717,33 @@ textarea,
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center; }
-      /* line 696, /Users/young/orderdrink/www/styles/app.scss */
+      /* line 697, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .list-item-container .list-item-right {
         width: 100%;
         float: right; }
-        /* line 699, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 700, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content {
           margin-left: 50px;
           margin-right: 30px; }
-          /* line 702, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 703, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .name {
             font-weight: 500;
             line-height: 16px;
             font-size: 15px;
             margin-bottom: 6px; }
-          /* line 708, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 709, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .desc {
             line-height: 16px; }
-          /* line 711, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 712, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .list-item-container .list-item-right .list-item-content .lucent {
             opacity: 0.4; }
 
-/* line 720, /Users/young/orderdrink/www/styles/app.scss */
+/* line 721, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 724, /Users/young/orderdrink/www/styles/app.scss */
+/* line 725, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
