--- a/styles/app.scss
+++ b/styles/app.scss
@@ -629,6 +629,7 @@ textarea,
         height: 100%;
         position: relative;
         display: block;
+        margin: 0;
         .card-image {
             height: 100%;
             .near_buttons {
