--- a/styles/app.scss
+++ b/styles/app.scss
@@ -646,6 +646,8 @@ textarea,
         .card-footer {
             position: absolute;
             bottom: 0px;
+            left: 0;
+            width: 100%;
             background-color: #fff;
             opacity: 0.8;
         }
