--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -28,15 +28,15 @@
                 <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
                 <span class="card-title activator grey-text text-darken-4" ng-bind="nowShop.company_name + nowShop.name"></span>
                 <p ng-bind="nowShop.address"></p>
+                <i class="ion-ios-arrow-up"></i>
             </div>
         </div>
         <div class="card-reveal">
             <div class="card-avatar waves-effect waves-block">
                 <div class="avatar" rn-lazy-background="shopAvatar(shop.company_id)"></div>
-                <span class="card-title activator grey-text text-darken-4" ng-bind="">
-                    {{nowShop.company_name + nowShop.name}}</span>
-
+                <span class="card-title activator grey-text text-darken-4" ng-bind="nowShop.company_name + nowShop.name"></span>
                 <p ng-bind="nowShop.address"></p>
+                <i class="ion-ios-close-empty"></i>
             </div>
             <ons-scroller>
                 <ons-list>
