--- a/styles/app.scss
+++ b/styles/app.scss
@@ -699,38 +699,48 @@ textarea,
         }
         .card-reveal {
             padding: 0px;
-            .list-item-container {
-                line-height: 1;
-                font-size: 14px;
-                padding: 15px 0px 15px 15px;
-                .list-item-left {
-                    width: 60px;
-                    margin-right: -60px;
-                    float: left;
-                    .avatar {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        @include backgroundCover();
+            .card-header {
+                left: 0px;
+                width: 100%;
+                background-color: #fff;
+                top: 0px;
+                position: absolute;
+            }
+            .ons-scroller {
+                margin-top: 96px;
+                .list-item-container {
+                    line-height: 1;
+                    font-size: 14px;
+                    padding: 15px 0px 15px 15px;
+                    .list-item-left {
+                        width: 60px;
+                        margin-right: -60px;
+                        float: left;
+                        .avatar {
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            @include backgroundCover();
+                        }
                     }
-                }
-                .list-item-right {
-                    width: 100%;
-                    float: right;
-                    .list-item-content {
-                        margin-left: 50px;
-                        margin-right: 30px;
-                        .name {
-                            font-weight: 500;
-                            line-height: 16px;
-                            font-size: 15px;
-                            margin-bottom: 6px;
-                        }
-                        .desc {
-                            line-height: 16px;
-                        }
-                        .lucent {
-                            opacity: 0.4;
+                    .list-item-right {
+                        width: 100%;
+                        float: right;
+                        .list-item-content {
+                            margin-left: 50px;
+                            margin-right: 30px;
+                            .name {
+                                font-weight: 500;
+                                line-height: 16px;
+                                font-size: 15px;
+                                margin-bottom: 6px;
+                            }
+                            .desc {
+                                line-height: 16px;
+                            }
+                            .lucent {
+                                opacity: 0.4;
+                            }
                         }
                     }
                 }
