--- a/styles/app.css
+++ b/styles/app.css
@@ -725,21 +725,22 @@ textarea,
       width: 100%;
       background-color: #fff;
       top: 0px;
-      position: absolute; }
-    /* line 709, /Users/young/orderdrink/www/styles/app.scss */
+      position: absolute;
+      box-shadow: 1px 2px 3px #aaa; }
+    /* line 710, /Users/young/orderdrink/www/styles/app.scss */
     .near_page .card .card-reveal .ons-scroller {
-      margin-top: 96px; }
-      /* line 711, /Users/young/orderdrink/www/styles/app.scss */
+      padding-top: 120px; }
+      /* line 712, /Users/young/orderdrink/www/styles/app.scss */
       .near_page .card .card-reveal .ons-scroller .list-item-container {
         line-height: 1;
         font-size: 14px;
         padding: 15px 0px 15px 15px; }
-        /* line 715, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 716, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-left {
           width: 60px;
           margin-right: -60px;
           float: left; }
-          /* line 719, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 720, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-left .avatar {
             width: 40px;
             height: 40px;
@@ -747,33 +748,33 @@ textarea,
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center; }
-        /* line 726, /Users/young/orderdrink/www/styles/app.scss */
+        /* line 727, /Users/young/orderdrink/www/styles/app.scss */
         .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right {
           width: 100%;
           float: right; }
-          /* line 729, /Users/young/orderdrink/www/styles/app.scss */
+          /* line 730, /Users/young/orderdrink/www/styles/app.scss */
           .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content {
             margin-left: 50px;
             margin-right: 30px; }
-            /* line 732, /Users/young/orderdrink/www/styles/app.scss */
+            /* line 733, /Users/young/orderdrink/www/styles/app.scss */
             .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content .name {
               font-weight: 500;
               line-height: 16px;
               font-size: 15px;
               margin-bottom: 6px; }
-            /* line 738, /Users/young/orderdrink/www/styles/app.scss */
+            /* line 739, /Users/young/orderdrink/www/styles/app.scss */
             .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content .desc {
               line-height: 16px; }
-            /* line 741, /Users/young/orderdrink/www/styles/app.scss */
+            /* line 742, /Users/young/orderdrink/www/styles/app.scss */
             .near_page .card .card-reveal .ons-scroller .list-item-container .list-item-right .list-item-content .lucent {
               opacity: 0.4; }
 
-/* line 751, /Users/young/orderdrink/www/styles/app.scss */
+/* line 752, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_item {
   font-size: 14px;
   font-weight: 600; }
 
-/* line 755, /Users/young/orderdrink/www/styles/app.scss */
+/* line 756, /Users/young/orderdrink/www/styles/app.scss */
 .caculate_info {
   font-size: 12px;
   color: #777;
