--- a/styles/app.scss
+++ b/styles/app.scss
@@ -635,7 +635,7 @@ textarea,
                 left: 5px;
                 z-index: 1;
                 button{
-                    max-width: 30%;
+                    padding: 0 10px;
                 }
             }
             #googlemap {
